feat: implement extensible rule configuration system with new models and UI components